# CoHAN2.0

./: .gitmodules  ReadME.md  planners_launch.py
src/agent_path_prediction/: CMakeLists.txt  package.xml
src/agent_path_prediction/examples/: example_parameter_usage.cpp
src/agent_path_prediction/include/agent_path_prediction/: agent_path_prediction.hpp  agent_path_prediction_config.hpp  agents_class.hpp  parameter_utils.hpp  predict_goal_ros.hpp
src/agent_path_prediction/src/: agent_path_prediction.cpp  agents_class.cpp  predict_goal_ros.cpp
src/agent_path_prediction/srv/: AgentPosePredict.srv
src/cohan2.0_navigation/: working_params_tb3.yaml
src/cohan2.0_navigation/cohan_sim_navigation/: CMakeLists.txt  package.xml
src/cohan2.0_navigation/cohan_sim_navigation/config/: cohan2_params_pr2.yaml
src/cohan2.0_navigation/cohan_sim_navigation/launch/: agent_tracking_launch.py  bringup_launch.py  cohan_sim_pr2.py  cohan_sim_pr2_launch.py  localization_launch.py  navigation_launch.py  planners_launch.py  pr2_description_launch.py  rviz2_launch.py  sim_launch.py
src/cohan2.0_navigation/cohan_sim_navigation/launch/include/: agent_tracking.py  localization.py  move_base_nav.py  robo_description.py  robot_only.py
src/cohan2.0_navigation/cohan_sim_navigation/robots/: pr2.urdf
src/cohan2.0_navigation/cohan_sim_navigation/robots/robots/: pr2.urdf.xacro  pr2_no_arms.urdf.xacro  pr2_no_kinect.urdf.xacro  pr2_se.urdf.xacro  upload_pr2.launch
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/: materials.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/base_v0/: base.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/forearm_v0/: forearm.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/gripper_v0/: gripper.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/head_v0/: head.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/sensors/: double_stereo_camera.urdf.xacro  head_sensor_package.urdf.xacro  hokuyo_lx30_laser.urdf.xacro  kinect2.urdf.xacro  kinect_camera.urdf.xacro  kinect_prosilica_camera.urdf.xacro  microstrain_3dmgx2_imu.urdf.xacro  projector_wg6802418.urdf.xacro  prosilica_gc2450_camera.urdf.xacro  stereo_camera.urdf.xacro  wge100_camera.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/shoulder_v0/: shoulder.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/tilting_laser_v0/: tilting_laser.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/torso_v0/: torso.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/robots/urdf/upper_arm_v0/: upper_arm.urdf.xacro
src/cohan2.0_navigation/cohan_sim_navigation/rviz/: cohan.rviz
src/cohan2.0_navigation/cohan_sim_navigation/scripts/: activate_lifecylenodes_with_delay.py  agents_bridge.py  publish_joints.py
src/cohan2.0_navigation/cohan_stage_navigation/scripts/: teleop_humans_joy.py
src/cohan2.0_navigation/simulators/cohan_sim/: CMakeLists.txt
src/cohan_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/cohan_layers/include/cohan_layers/: agent_layer.hpp  agent_layer_config.hpp  agent_visibility_layer.hpp  static_agent_layer.hpp
src/cohan_layers/src/: agent_layer.cpp  agent_visibility_layer.cpp  static_agent_layer.cpp
src/cohan_msgs/: CMakeLists.txt  package.xml
src/cohan_msgs/msg/: AgentMarkerStamped.msg  AgentPath.msg  AgentTimeToGoal.msg  PointArray.msg  TrackedAgents.msg  TrajectoryPoint.msg
src/hateb_local_planner/: BT_Debug_Usage.md  CMakeLists.txt  hateb_local_planner_plugin.xml  package.xml
src/hateb_local_planner/behavior_trees/: all_modes.xml  all_modes_nav2.xml
src/hateb_local_planner/include/hateb_local_planner/: agents_class.hpp  agents_config.hpp  backoff.h  backoff_config.hpp  footprint_model.h  hateb_config.hpp  hateb_local_planner_ros.h  mode_switch.h  obstacles.h  optimal_planner.h  planner_interface.h  pose_se2.h  recovery_behaviors.h  timed_elastic_band.hpp  visualization.hpp
src/hateb_local_planner/include/hateb_local_planner/behavior_tree/: bt_core.h
src/hateb_local_planner/include/hateb_local_planner/behavior_tree/action/: set_mode.h
src/hateb_local_planner/include/hateb_local_planner/behavior_tree/condition/: backoff_exit_condition.h  dual_band_exit_condition.h  is_goal_reached.h  passthrough_condition.h  single_band_exit_condition.h  vel_obs_exit_condition.h
src/hateb_local_planner/include/hateb_local_planner/g2o_types/: base_teb_edges.h  edge_acceleration.h  edge_agent_agent_safety.h  edge_agent_robot_rel_velocity.h  edge_agent_robot_safety.h  edge_agent_robot_visibility.h  edge_dynamic_obstacle.h  edge_invisible_human.h  edge_kinematics.h  edge_obstacle.h  edge_prefer_rotdir.h  edge_shortest_path.h  edge_static_agent_visibility.h  edge_time_optimal.h  edge_velocity.h  edge_via_point.h
src/hateb_local_planner/msg/: FeedbackMsg.msg
src/hateb_local_planner/src/: agents_class.cpp  backoff.cpp  hateb_config.cpp  hateb_local_planner_ros.cpp  mode_switch.cpp  obstacles.cpp  optimal_planner.cpp  recovery_behaviors.cpp  timed_elastic_band.cpp  visualization.cpp
src/hateb_local_planner/src/behavior_tree/action/: set_mode.cpp
src/hateb_local_planner/src/behavior_tree/condition/: backoff_exit_condition.cpp  dual_band_exit_condition.cpp  is_goal_updated.cpp  passthrough_condition.cpp  single_band_exit_condition.cpp  vel_obs_exit_condition.cpp
src/invisible_humans_detection/: CMakeLists.txt  package.xml
src/invisible_humans_detection/include/invisible_humans_detection/: invisible_humans_config.hpp  invisible_humans_detection.hpp
src/invisible_humans_detection/launch/: invisible_humans_detection.xml
src/invisible_humans_detection/src/: invisible_humans_detection.cpp
src/ros2_helpers/: CMakeLists.txt  package.xml
src/ros2_tests/: fake_tracked_agents_publisher.py  simulation_clock_publisher.py  test_all_predictions.py  test_clock.py
src/rviz_path_array/: CMakeLists.txt  package.xml  plugin_description.xml
src/rviz_path_array/src/: patharray_display.cpp  patharray_display.hpp
(+7 files in other folders)
