<?xml version="1.0"?>
<package format="3">
  <name>cohan_sim_navigation</name>
  <version>0.0.1</version>
  <description>configuration and launch files for cohan_sim_navigation</description>

  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>
  <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>rviz2</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>cohan_sim</exec_depend>
  <exec_depend>agent_path_prediction</exec_depend>
  <exec_depend>hateb_local_planner</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>